# data-ai-project

./: .copilot  .dockerignore  .gitignore  .sqlfluff  .sqlfluffignore  Instruction.md  Makefile  README.md  VERIFICATION_CHECKLIST.md  docker-compose.yaml  env_example.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  test.py  test_minio_connection.py
.dbt/: .user.yml  profiles.yml
.github/: CI_SETUP.md
.github/workflows/: pr_ci.yml
ai_agent/: .env.example  .gitignore  cli.py  demo_setup.py  example_usage.py  index_documents.py  main.py  requirements.txt  test_components.py
ai_agent/api/: main.py
ai_agent/models/: query.py
ai_agent/services/: __init__.py  agent.py  embeddings.py  pdf_loader.py  rag_retriever.py  sql_runner.py  vector_store.py
ai_agent/vector_store/: chroma.sqlite3
airflow/: requirements.txt  setup_minio_connection.sh  setup_mysql_connection.sh  setup_snowflake_connection.sh
airflow/config/: airflow.cfg
airflow/dags/: e2e_data_pipeline.py
config/database/mysql/: Dockerfile
config/database/mysql/conf.d/: my.cnf
config/database/mysql/docker-entrypoint-initdb.d/: 1_init.sql  2_import_data.sql  3_add_constraints.sql
config/database/postgres/scripts/: init.sql
config/database/snowflake_dw/: setup_incremental.py
data/database/mysql_data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
data/database/mysql_data/#innodb_redo/: #ib_redo9
data/database/mysql_data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
data/database/mysql_data/ecommerce_db/: olist_customers_dataset.ibd  olist_order_items_dataset.ibd  olist_order_payments_dataset.ibd  olist_order_reviews_dataset.ibd  olist_orders_dataset.ibd  olist_products_dataset.ibd  olist_sellers_dataset.ibd  product_category_name_translation.ibd
data/database/mysql_data/mysql/: general_log_213.sdi  slow_log_214.sdi
data/database/mysql_data/sys/: sys_config.ibd
data_source/postgres_data/global/: 1260  2671  pg_control  pg_internal.init
data_source/postgres_data/pg_stat/: pgstat.stat
db_scripts/mysql-data/scripts/: init.sql
db_scripts/postgres-data/scripts/: init.sql
docker/: docker-compose.airflow.yml  docker-compose.batch.yml  docker-compose.streaming.yml
docker/airflow/config/: airflow.cfg
docker/dockerfiles/: Dockerfile.airflow  Dockerfile.debezium  Dockerfile.flink
docs/: ERD.md  late_arriving_data.md  streaming.md
docs/research/: data_source_validation.md
dwh/: IMPLEMENTATION_SUMMARY.md
dwh/snowflake/: dbt_project.yml  package-lock.yml  packages.yml
dwh/snowflake/docs/: erd.md  erd_old.md
dwh/snowflake/macros/: calculate_customer_segment.sql  generate_date_spine.sql
dwh/snowflake/snapshots/: _snapshots__models.yml  snap_dim_customer.sql  snap_dim_product.sql  snap_dim_seller.sql
dwh/snowflake/tests/: assert_positive_revenue_for_delivered_orders.sql  assert_valid_order_dates.sql
elt_pipeline/batch/ops/: extract_data_from_mysql.py  load_data_to_minio.py  load_data_to_snowflake.py
elt_pipeline/batch/pipelines/: main.py
elt_pipeline/batch/tests/: .coverage  pytest.ini  requirements-test.txt  run_tests.py  test_batch_logging_integration.py  test_extract_data_from_mysql.py  test_load_data_to_minio.py  test_load_data_to_snowflake.py  test_minio_loader.py  test_mysql_connection.py  test_mysql_loader.py  test_operations_integration.py  test_postgresql_connection.py  test_snowflake_loader.py
elt_pipeline/batch/utils/: data_loader.py  loaded_at_tracker.py  minio_loader.py  mysql_loader.py  psql_loader.py  snowflake_loader.py
elt_pipeline/data_collection/: fake_data_generator.py
elt_pipeline/docs/: README.md
elt_pipeline/docs/batch/: README.md
elt_pipeline/docs/streaming/: README.md
elt_pipeline/logger_utils/: README.md  __init__.py  batch_logger.py  logger_config.py  streaming_logger.py
elt_pipeline/logger_utils/tests/: test_logging_system.py
elt_pipeline/ops/: extract_data_from_mysql.py  load_data_to_psql.py
elt_pipeline/pipelines/: pipeline_mysql_to_qsql_pipeline.py
elt_pipeline/streaming/: api_collector.py  main.py
elt_pipeline/streaming/common/: config.py  kafka_client.py  logger.py  validate_config.py
elt_pipeline/streaming/config/: kafka_config.py  metadata.json
elt_pipeline/streaming/docs/: CONSUMER_OFFSET_BEHAVIOR.md
elt_pipeline/streaming/examples/: relational_data_demo.py
elt_pipeline/streaming/flink/: submit_job.py
elt_pipeline/streaming/ops/: __init__.py  generate_data.py  load_data_to_psql.py  load_relational_data.py
elt_pipeline/streaming/pipeline/: load_data_to_psql.py  main.py  pipeline_load_data_to_psql.py
elt_pipeline/streaming/tests/: check_kafka_messages.py  count_kafka_messages.py  debug_alerts.py  query_alerts.py  test_db_query.py  test_flink_monitoring.py  test_flink_postgres.py  test_structure.py  verify_all_alerts.py
elt_pipeline/streaming/utils/: __init__.py  fake_data_generator.py  psql_loader.py
elt_pipeline/utils/: data_loader.py  minio_loader.py  mysql_loader.py  psql_loader.py
infra/minio/: create_data_laning_dir.py
infra/mysql_db/: Dockerfile
infra/mysql_db/conf.d/: my.cnf
infra/mysql_db/docker-entrypoint-initdb.d/: 1_init.sql
infra/psql_db/scripts/: create_alerts_table.sql  init.sql
infra/snowflake_dw/: clean_up.py  create_snowflake_stages.py  test_snowflake_setup.py
kafka/: .dockerignore  .gitignore  Dockerfile.consumer  Dockerfile.producer  consumer.py  database.py  producer.py  pyproject.toml  test_setup.py
kafka/services/: data_generator.py  database.py
kafka/utils/: config.py  logger.py  models.py
mysql_db/certs/: ca-key.pem  ca.pem  server-cert.pem  server-key.pem  server-req.pem
mysql_db/conf.d/: my.cnf
mysql_db/docker-entrypoint-initdb.d/: 2_import_data.sql
scripts/: cleanup_minio_buckets.py  hello.py
scripts/data_collection/: api_collector.py
tests/: test_data_pipeline.py
vector_store/: chroma.sqlite3
(+398 files in other folders)
